# Autonomous-Systems-Project

./: detection.yaml  imgui.ini
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aias_lab_skillset/include/: AiasLabSkillsetNode.hpp  Node.hpp
install/aias_lab_skillset/share/aias_lab_skillset/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/aias_lab_skillset/share/aias_lab_skillset/cmake/: aias_lab_skillsetConfig.cmake  aias_lab_skillsetExport.cmake
install/autonomy_architecture/lib/autonomy_architecture/: odom_to_pose
install/autonomy_architecture/share/autonomy_architecture/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomy_architecture/share/autonomy_architecture/launch/: autonomy_architecture.launch.py
install/control_pkg/share/control_pkg/: package.sh
install/isae_robot_skillset/include/isae_robot_skillset/: NodeDebug.hpp  Resource.hpp
install/isae_robot_skillset/share/isae_robot_skillset/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/isae_robot_skillset/share/isae_robot_skillset/cmake/: ament_cmake_export_targets-extras.cmake  isae_robot_skillsetExport-noconfig.cmake  isae_robot_skillsetExport.cmake
install/isae_robot_skillset_client/share/isae_robot_skillset_client/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/isae_robot_skillset_client/share/isae_robot_skillset_client/cmake/: isae_robot_skillset_clientConfig.cmake
install/isae_robot_skillset_gui_widgets/lib/isae_robot_skillset_gui_widgets/: isae_robot_skillset_gui_widgets_node
install/isae_robot_skillset_gui_widgets/share/isae_robot_skillset_gui_widgets/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/isae_robot_skillset_gui_widgets/share/isae_robot_skillset_gui_widgets/cmake/: ament_cmake_export_targets-extras.cmake  isae_robot_skillset_gui_widgetsConfig.cmake  isae_robot_skillset_gui_widgetsExport-noconfig.cmake
install/isae_robot_skillset_interfaces/share/isae_robot_skillset_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/isae_robot_skillset_interfaces/share/isae_robot_skillset_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_isae_robot_skillset_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_isae_robot_skillset_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  isae_robot_skillset_interfacesConfig.cmake  isae_robot_skillset_interfaces__rosidl_typesupport_cExport-noconfig.cmake  isae_robot_skillset_interfaces__rosidl_typesupport_cExport.cmake  isae_robot_skillset_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  isae_robot_skillset_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  isae_robot_skillset_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/isae_robot_skillset_interfaces/share/isae_robot_skillset_interfaces/msg/: DataPoseResponse.idl  DataRequest.idl  EventRequest.idl  SkillDetectTargetInput.idl  SkillDetectTargetOutput.idl  SkillDetectTargetRequest.msg  SkillDetectTargetStatus.msg  SkillMoveToRequest.idl  SkillMoveToResponse.idl  (+8 more)
install/isae_simulations_package/share/isae_simulations_package/: local_setup.sh  package.sh
install/target_tracking/share/target_tracking/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/visual_detection/lib/visual_detection/: visual_detection_node
install/visual_detection/share/visual_detection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/autonomy_architecture/: imgui.ini  isae_robot.json  isae_robot.rl
src/autonomy_architecture/aias_lab_skillset/: CMakeLists.txt
src/autonomy_architecture/aias_lab_skillset/include/: AiasLabSkillsetNode.hpp
src/autonomy_architecture/aias_lab_skillset/src/: Node.cpp  aias_lab_skillset_node.cpp
src/autonomy_architecture/autonomy_architecture/: CMakeLists.txt
src/autonomy_architecture/autonomy_architecture/pddl/: domain.pddl  problem.pddl
src/autonomy_architecture/autonomy_architecture/script/: ff_wrapper.py  skill_actions.py  skill_mission_1.py  skill_mission_2.py
src/autonomy_architecture/autonomy_architecture/src/: odom_to_pose.cpp
src/autonomy_architecture/isae_robot_skillset/: CMakeLists.txt
src/autonomy_architecture/isae_robot_skillset/include/isae_robot_skillset/: Node.hpp
src/autonomy_architecture/isae_robot_skillset/src/: Data.cpp  Event.cpp  Node.cpp  NodeDebug.cpp  Resource.cpp  Skill.cpp  isae_robot_node.cpp
src/autonomy_architecture/isae_robot_skillset_client_py/: CMakeLists.txt
src/autonomy_architecture/isae_robot_skillset_client_py/isae_robot_skillset_client/: events.py  resources.py
src/autonomy_architecture/isae_robot_skillset_gui_widgets/: CMakeLists.txt  package.xml
src/autonomy_architecture/isae_robot_skillset_gui_widgets/include/isae_robot_skillset_gui_widgets/: client.hpp  widget.hpp
src/autonomy_architecture/isae_robot_skillset_gui_widgets/src/: client.cpp  main.cpp  widget.cpp
src/autonomy_architecture/isae_robot_skillset_interfaces/: CMakeLists.txt
src/autonomy_architecture/isae_robot_skillset_interfaces/msg/: DataPose.msg  DataPoseResponse.msg  EventResponse.msg  SkillDetectTargetResponse.msg  SkillMoveToProgress.msg  SkillTrackTargetProgress.msg  SkillTrackTargetStatus.msg
src/isae_simulations_package/models/greenBoxtesttextures/: model.config
src/target_tracking/control_pkg/: CMakeLists.txt  package.xml
src/target_tracking/control_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/target_tracking/control_pkg/log/: latest_build
src/target_tracking/control_pkg/src/: control_node.cpp
src/target_tracking/target_tracking/: CMakeLists.txt
src/target_tracking/visual_detection/: CMakeLists.txt
src/target_tracking/visual_detection/src/: DetectionCnam_codels.cpp  cnam_detection.cpp
(+239 files in other folders)
