<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isae_robot_skillset_gui_widgets</name>
  <version>0.0.0</version>
  <description>Genereted with Robot Language GUI generator</description>
  <maintainer email="charles.lesire@onera.fr">Charles Lesire</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gui_tools</build_depend>
  <build_depend>isae_robot_skillset_interfaces</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
